[project]
name = "tamu-spark-transcoding"
version = "0.1.0"
description = "GPU-accelerated video transcoding for Avalon Media System on NVIDIA DGX Spark"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.66",
]

[project.scripts]
transcode = "tamu_spark_transcoding.transcode:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamu_spark_transcoding"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
